--- a/estilo/style.css
+++ b/estilo/style.css
@@ -67,7 +67,7 @@ header > p {
     color: white;
     max-width: 500px;
     margin: auto;
-    margin-bottom: 30px;
+    padding-bottom: 50px;
     padding-left: 10px;
     padding-right: 10px;
     text-shadow: 2px 2px 0px #00000072;
